[package]
name = "rock-paper-paradise"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
bevy = { version = "0.15" }
bevy_prng = { version = "0.9.0", features = ["wyrand"] }
bevy_rand = "0.9.0"

derive_more = { version = "1.0", features = ["full"] }
itertools = { version = "0.13" }
rand = "0.8"

[build-dependencies]
embed-resource = "1"
