[package]
name = "rock-paper-paradise"
version = "0.1.0"
publish = false
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui_picking_backend",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "png",
    "smaa_luts",
    "tonemapping_luts",
    "webgl2",
] }
bevy_prng = { version = "0.9.0", features = ["wyrand"] }
bevy_rand = "0.9.0"

derive_more = { version = "1.0", features = ["full"] }
itertools = { version = "0.13" }
rand = "0.8"

[build-dependencies]
embed-resource = "1"
